CSS Overflow fix

--- a/app/assets/stylesheets/effective_datatables/_overrides.scss
+++ b/app/assets/stylesheets/effective_datatables/_overrides.scss
@@ -1,4 +1,6 @@
 .dataTables_wrapper {   // This is the Header
+  overflow-x: scroll;
+
   table.dataTable {
     border-collapse: collapse;
     .form-inline, .form-control { width: 98%; }
